--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         </div>
         
         <div class="copyright">
-            <p>© 2025 玄盾OpenAPI | 提供专业开发者支持</p>
+            <p>© 2025-2026 玄盾OpenAPI | 提供专业开发者支持</p>
         </div>
     </footer>
 </body>
