--- a/community.html
+++ b/community.html
@@ -371,8 +371,8 @@
             <div class="sidebar-section">
                 <h3>社区指南</h3>
                 <ul class="sidebar-links">
-                    <li><a href="#"><i class="fas fa-book"></i> 社区规则</a></li>
-                    <li><a href="#"><i class="fas fa-question-circle"></i> 常见问题</a></li>
+                    <li><a href="社区规则.md"><i class="fas fa-book"></i> 社区规则</a></li>
+                    <li><a href="常见问题.md"><i class="fas fa-question-circle"></i> 常见问题</a></li>
                 </ul>
             </div>
             
