--- a/community.html
+++ b/community.html
@@ -890,7 +890,7 @@
                     </div>
                     
                     <div class="comments-section">
-                        <h2>回复 (${issue.comments})</h2>
+                        <h2>评论区 (${issue.comments})</h2>
                         ${commentsHTML || '<p>暂无回复</p>'}
                     </div>
                     
