--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <a href="#">文档</a>
                 <a href="#">API参考</a>
                 <a href="#">SDK下载</a>
-                <a href="community2.html" class="nav-link">社区</a>
+                <a href="community.html" class="nav-link">社区</a>
             </nav>
         </div>
     </header>
@@ -579,7 +579,7 @@
                 <h3>资源</h3>
                 <ul class="footer-links">
                     <li><a href="#">博客</a></li>
-                    <li><a href="community2.html" class="nav-link">社区</a></li>
+                    <li><a href="community.html" class="nav-link">社区</a></li>
                     <li><a href="#">教程</a></li>
                     <li><a href="#">活动</a></li>
                 </ul>
