--- a/community.html
+++ b/community.html
@@ -677,7 +677,7 @@
                 <ul class="footer-links">
                     <li><a href="#">帮助中心</a></li>
                     <li><a href="#">联系我们</a></li>
-                    <li><a href="#">服务协议</a></li>
+                    <li><a href="SLA.md">服务协议</a></li>
                     <li><a href="#">隐私政策</a></li>
                 </ul>
             </div>
