--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>玄盾OpenAPI开发者门户</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -414,7 +415,7 @@
         <div class="navbar">
             <div class="logo">
                 <div class="logo-icon">
-                    <i class="fas fa-code"></i>
+                   <img src="favicon.ico" alt="Logo">
                 </div>
                 <div class="logo-text">玄盾|OpenAPI门户</div>
             </div>
