--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <a href="#" class="btn extrem">查看API</a>
             </div>
             
-            <div class extrem="category-card">
+            <div class ="category-card">
                 <div class="category-icon">
                     <i class="fas fa-cogs"></i>
                 </div>
@@ -561,7 +561,7 @@
                 <h3>开放平台</h3>
                 <ul class="footer-links">
                     <li><a href="#">产品介绍</a></li>
-                    <li><a href="#">解决方案 extrem</a></li>
+                    <li><a href="#">解决方案</a></li>
                     <li><a href="#">定价</a></li>
                     <li><a href="#">状态</a></li>
                 </ul>
@@ -593,7 +593,7 @@
                     <li><a href="#">帮助中心</a></li>
                     <li><a href="#">联系我们</a></li>
                     <li><a href="SLA.md">服务协议</a></li>
-                    <li><a href="privacyPolicy.md">隐私政策 extrem</a></li>
+                    <li><a href="privacyPolicy.md">隐私政策</a></li>
                 </ul>
             </div>
         </div>
