--- a/community.html
+++ b/community.html
@@ -667,7 +667,7 @@
         </div>
     </div>
     
-    <!-- 页脚 -->
+ <!-- 页脚 -->
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -693,7 +693,7 @@
             <div class="footer-section">
                 <h3>资源</h3>
                 <ul class="footer-links">
-                    <li><a href="community.html" class="nav-link">社区</a></li>
+                    <li><a href="community.html">社区</a></li>
                     <li><a href="#">教程</a></li>
                     <li><a href="#">活动</a></li>
                 </ul>
@@ -704,8 +704,8 @@
                 <ul class="footer-links">
                     <li><a href="#">帮助中心</a></li>
                     <li><a href="#">联系我们</a></li>
-                    <li><a href="SLA.md">服务协议</a></li>
-                    <li><a href="privacyPolicy.md">隐私政策</a></li>
+                    <li><a href="#">服务协议</a></li>
+                    <li><a href="#">隐私政策</a></li>
                 </ul>
             </div>
         </div>
