--- a/community.html
+++ b/community.html
@@ -669,16 +669,6 @@
     
    <!-- 页脚 -->
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>开放平台</h3>
-                <ul class="footer-links">
-                    <li><a href="#">产品介绍</a></li>
-                    <li><a href="#">解决方案</a></li>
-                    <li><a href="#">定价</a></li>
-                    <li><a href="#">状态</a></li>
-                </ul>
-            </div>
             
             <div class="footer-section">
                 <h3>开发者</h3>
@@ -882,10 +872,10 @@
                 // 添加回复表单
                 const replyFormHTML = `
                     <div class="reply-form">
-                        <h3>添加回复</h3>
-                        <p>请前往GitHub添加回复：</p>
+                        <h3>添加评论</h3>
+                        <p>评论千万条，等你发一条</p>
                         <a href="https://github.com/${REPO_OWNER}/${REPO_NAME}/issues/${issueId}" class="github-reply-link" target="_blank">
-                            <i class="fab fa-github"></i> 在GitHub上回复此帖子
+                            <i class="fab fa-github"></i> 评论
                         </a>
                     </div>
                 `;
