--- a/community.html
+++ b/community.html
@@ -921,7 +921,7 @@
                     
                     <div class="comments-section">
                         <h2>评论区 (${issue.comments})</h2>
-                        ${commentsHTML || '<p>暂无回复</p>'}
+                        ${commentsHTML || '<p>暂无评论</p>'}
                     </div>
                     
                     ${replyFormHTML}
