--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
             <nav class="nav-links">
                 <a href="#" class="active">首页</a>
-                <a href="第三章.ppt">文档</a>
+                <a href="#">文档</a>
                 <a href="#">API参考</a>
                 <a href="#">SDK下载</a>
                 <a href="community.html" class="nav-link">社区</a>
