--- a/community.html
+++ b/community.html
@@ -895,7 +895,7 @@
                         <h3>添加评论</h3>
                         <p>评论千万条，等你发一条</p>
                         <a href="https://github.com/${REPO_OWNER}/${REPO_NAME}/issues/${issueId}" class="github-reply-link" target="_blank">
-                            <i class="fab fa-github"></i> 我要评论
+                            <i class="fab fa-github"></i> 发表评论
                         </a>
                     </div>
                 `;
